styling changes to make hamburger menu viewable in firefox and to put fixed search at bottom on mobile

--- a/webroot/skin/frontend/blueacorn/mis/css/styles-ie8.css
+++ b/webroot/skin/frontend/blueacorn/mis/css/styles-ie8.css
@@ -2514,6 +2514,9 @@ a.skip-link {
 .skip-nav .label {
   display: none; }
 
+.skip-link.skip-search {
+  display: none; }
+
 .skip-link.skip-nav .icon {
   background-image: url("../images/sprite.png");
   background-position: -139px -3px;
