--- a/webroot/skin/frontend/blueacorn/mis/css/styles.css
+++ b/webroot/skin/frontend/blueacorn/mis/css/styles.css
@@ -3030,6 +3030,29 @@ a.skip-link {
 .skip-nav .label {
   display: none; }
 
+.skip-link.skip-search {
+  display: none; }
+
+@media only screen and (max-width: 479px) {
+  .skip-content.skip-active ~ #header-search {
+    position: fixed;
+    bottom: 0;
+    z-index: 8888;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    background: #eeeeee;
+    padding-left: 70%; } }
+
+@media only screen and (max-width: 599px) {
+  .skip-content.skip-active ~ #header-search {
+    position: fixed;
+    bottom: 0;
+    z-index: 8888;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    background: #eeeeee;
+    padding-left: 70%; } }
+
 .skip-link.skip-nav .icon {
   background-image: url("../images/sprite.png");
   background-position: -139px -3px;
@@ -3049,6 +3072,18 @@ a.skip-link {
 
 .skip-link.skip-nav.skip-active {
   background-color: #fff; }
+  @media only screen and (max-width: 479px) {
+    .skip-link.skip-nav.skip-active {
+      position: fixed;
+      bottom: 0;
+      z-index: 9999;
+      margin-bottom: 10px; } }
+  @media only screen and (max-width: 599px) {
+    .skip-link.skip-nav.skip-active {
+      position: fixed;
+      bottom: 0;
+      z-index: 9999;
+      margin-bottom: 10px; } }
   .skip-link.skip-nav.skip-active .icon {
     background-position: -48px -30px;
     width: 20px;
@@ -3752,7 +3787,11 @@ a.skip-link {
   padding-top: 20px; }
   @media only screen and (max-width: 599px) {
     .footer-container {
-      padding-top: 0px; } }
+      padding-top: 0px;
+      background: #EEEEEE; } }
+  @media only screen and (max-width: 479px) {
+    .footer-container {
+      background: #EEEEEE; } }
 
 .footer {
   clear: both;
@@ -3763,7 +3802,10 @@ a.skip-link {
      */ }
   @media only screen and (max-width: 479px) {
     .footer {
-      padding-top: 15px; } }
+      padding-top: 0px; } }
+  @media only screen and (max-width: 599px) {
+    .footer {
+      padding-top: 0px; } }
   .footer .block-title {
     border-bottom: 0;
     padding: 3px 0;
@@ -3777,6 +3819,12 @@ a.skip-link {
     border: 0; }
   .footer .block-title strong {
     font-weight: normal; }
+  @media only screen and (max-width: 479px) {
+    .footer .links-container {
+      margin-bottom: 30px; } }
+  @media only screen and (max-width: 599px) {
+    .footer .links-container {
+      margin-bottom: 30px; } }
   .footer .links-container .links {
     margin-left: 27px; }
     @media only screen and (max-width: 950px) {
