--- a/webroot/skin/frontend/blueacorn/mis/scss/layout/_footer.scss
+++ b/webroot/skin/frontend/blueacorn/mis/scss/layout/_footer.scss
@@ -42,6 +42,10 @@
     padding-top: 20px;
     @include bp(max-width, $bp-small) {
       padding-top: 0px;
+      background: #EEEEEE;
+    }
+    @include bp(max-width, $bp-xsmall) {
+      background: #EEEEEE;
     }
 }
 
@@ -51,7 +55,10 @@
     padding-top: $trim;
 
     @include bp(max-width, $bp-xsmall) {
-        padding-top: $trim-small;
+        padding-top: 0px;
+    }
+    @include bp(max-width, $bp-small) {
+      padding-top: 0px;
     }
 
     .block-title {
@@ -72,6 +79,12 @@
     }
 
     .links-container {
+      @include bp(max-width, $bp-xsmall) {
+        margin-bottom: 30px;
+      }
+      @include bp(max-width, $bp-small) {
+        margin-bottom: 30px;
+      }
         .links {
             margin-left: 27px;
 
